[package]
name = "allowlistbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.10.10" }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }